force-app/main/default/objects/Issue_Ticket__c/Issue_Ticket__c.object-meta.xml
<CustomObject>
    <label>Issue Ticket</label>
    <nameField>
        <label>Issue Ticket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issue Ticket</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>