force-app/main/default/objects/Issue_Ticket__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Issue Ticket</relationshipLabel>
    <relationshipName>Issue_Ticket</relationshipName>
    <type>Lookup</type>
</CustomField>