force-app/main/default/objects/Issue_Ticket__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
                <default>true</default>
                <label>-</label>
            </value>
            <value>
                <fullName>New Requirement 需求新增</fullName>
            </value>
            <value>
                <fullName>Requirement Change 需求变更</fullName>
            </value>
            <value>
                <fullName>Improvement and Optimization 改善优化</fullName>
            </value>
            <value>
                <fullName>System Bug</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>