force-app/main/default/objects/Issue_Ticket__c/fields/Ticket_handler__c.field-meta.xml
<CustomField>
    <fullName>Ticket_handler__c</fullName>
    <label>Ticket handler</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Xiaowei Li</fullName>
            </value>
            <value>
                <fullName>Zhen Zhang</fullName>
            </value>
            <value>
                <fullName>Jiong Zhang</fullName>
            </value>
            <value>
                <fullName>Yanhao Qin</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>