force-app/main/default/objects/Issue_Ticket__c/fields/TicketNum__c.field-meta.xml
<CustomField>
    <fullName>TicketNum__c</fullName>
    <displayFormat>TK-{000000}</displayFormat>
    <label>TicketNum</label>
    <type>AutoNumber</type>
</CustomField>