force-app/main/default/objects/Issue_Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>TicketNum__c</columns>
    <columns>NAME</columns>
    <columns>Function_Module__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Comments__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>