force-app/main/default/objects/Issue_Ticket__c/listViews/Issue_Ticket.listView-meta.xml
<ListView>
    <fullName>Issue_Ticket</fullName>
    <columns>TicketNum__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Function_Module__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Issue Ticket</label>
</ListView>